--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "start": "node dist/index.js",
     "build": "tsc",
-    "test": "jest"
+    "test": "NODE_ENV=test jest",
+    "test:watch": "jest --watchAll",
+    "lint": "eslint . --ext .ts",
+    "type": "module",
+    "format": "prettier --write ."
   },
   "keywords": [],
   "author": "",
@@ -24,7 +28,13 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.0.6",
     "@types/redis": "^4.0.10",
+    "@types/supertest": "^6.0.3",
+    "@typescript-eslint/eslint-plugin": "^8.35.0",
+    "@typescript-eslint/parser": "^8.35.0",
+    "eslint": "^9.30.0",
     "jest": "^29.7.0",
+    "prettier": "^3.6.2",
+    "supertest": "^7.1.1",
     "ts-jest": "^29.4.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
