Fix CI: remove dist before tests, prevent duplicate mocks

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,4 +26,7 @@ jobs:
         run: npm run build
 
       - name: Run tests
-        run: npm test
+        run: |
+          rm -rf dist
+          npm install
+          npm test
