--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,35 +1,3 @@
-# name: CI - Build & Test
-
-# on:
-#   push:
-#     branches: [ main ]
-#   pull_request:
-#     branches: [ main ]
-
-# jobs:
-#   build:
-#     runs-on: ubuntu-latest
-
-#     steps:
-#       - name: Checkout code
-#         uses: actions/checkout@v3
-
-#       - name: Set up Node.js
-#         uses: actions/setup-node@v3
-#         with:
-#           node-version: 18
-
-#       - name: Install dependencies
-#         run: npm ci
-
-#       - name: Build TypeScript
-#         run: npm run build
-
-#       - name: Run tests
-#         run: |
-#           rm -rf dist
-#           npm install
-#           npm test
 name: CI - Build & Test
 
 on:
@@ -41,17 +9,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
-    services:
-      redis:
-        image: redis:7
-        ports:
-          - 6379:6379
-        options: >-
-          --health-cmd "redis-cli ping"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
 
     steps:
       - name: Checkout code
@@ -69,7 +26,53 @@ jobs:
         run: npm run build
 
       - name: Run tests
-        run: npm test
+        run: |
+          rm -rf dist
+          npm install
+          npm test
         env:
           REDIS_URL: redis://localhost:6379
           NODE_ENV: test
+# name: CI - Build & Test
+
+# on:
+#   push:
+#     branches: [ main ]
+#   pull_request:
+#     branches: [ main ]
+
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+
+#     services:
+#       redis:
+#         image: redis:7
+#         ports:
+#           - 6379:6379
+#         options: >-
+#           --health-cmd "redis-cli ping"
+#           --health-interval 10s
+#           --health-timeout 5s
+#           --health-retries 5
+
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v3
+
+#       - name: Set up Node.js
+#         uses: actions/setup-node@v3
+#         with:
+#           node-version: 18
+
+#       - name: Install dependencies
+#         run: npm ci
+
+#       - name: Build TypeScript
+#         run: npm run build
+
+#       - name: Run tests
+#         run: npm test
+#         env:
+#           REDIS_URL: redis://localhost:6379
+#           NODE_ENV: test
