--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,9 @@ jobs:
 
       - name: Build TypeScript
         run: npm run build
+        
+      - name: Clear Jest cache
+        run: npx jest --clearCache  
 
       - name: Run tests
         run: |
