--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "start": "node dist/index.js",
     "build": "tsc",
-    "test": "NODE_ENV=test jest",
+    "test": "rm -rf dist && NODE_ENV=test jest",
     "test:watch": "jest --watchAll",
     "lint": "eslint . --ext .ts",
     "type": "module",
